GNOME Bugzilla – Bug 668192
codecparsers: h264: fix ref_pic_list_modification()
Last modified: 2012-01-20 18:42:37 UTC
Created attachment 205536 [details] [review] codecparsers: h264: fix ref_pic_list_modification() The entries were not filled in linearly (index `i' was never incremented) and the termination was notr ecorded either. With the attached patch, the actual number of modifications is now recorded similarly to dec_ref_pic_marking(). i.e. an explicit counter is used instead of storing the termination value in the array. Locally tested with the VA-API H.264 decoder.
commit c92efe38e9f3e60509449ce1bb0d5a6d880c337a Author: Gwenole Beauchesne <gwenole.beauchesne@intel.com> Date: Wed Jan 18 16:35:16 2012 +0100 codecparsers: h264: fix ref_pic_list_modification() The entries were not filled in linearly and the termination was not recorded either. Now, the actual number of modifications is recorded similarly to dec_ref_pic_marking(). i.e. an explicit counter instead of storing the termination value in the array. https://bugzilla.gnome.org/show_bug.cgi?id=668192